# api-server-for-info

./: .gitignore  CLAUDE.md  CMakeLists.txt  LLM_SECURITY_INDEX.md  LLM_SECURITY_README.md  LLM_SECURITY_SUMMARY.md  MANIFEST.in  QUICKSTART.md  README.md  boot_setup.sh  brain.py  config.py  gitignore  go.mod  index.js  ip_server.py  knowledge_base.py  llm_security.c  llm_security.h  llm_security.hpp  llm_security.ts  llm_security_cli.py  llm_security_core.py  main.go  main.rs  main_agent.py  package.json  prompt.sh  requirements.txt  test_llm_security.py  urls.txt
.idx/: .env
examples/: example.c  example.cpp
public/: index.html
rust-mcp-server/: Cargo.toml
rust-mcp-server/src/: main.rs  proxy.rs  wifi.rs
tests/: test_framework.py  test_main.py
tools/: base_agent.py  fatalis_scanner.py  nmap_agent.py  recon_analyzer.py  registry.py  web_inspector_agent.py
tools/caido-recon/: Cargo.toml  README.md
tools/caido-recon/src/: apis.rs  cli.rs  main.rs  scanner.rs  vulns.rs
tools/fatalis-proxy/: Cargo.toml  README.md
tools/fatalis-proxy/src/: main.rs
tools/nuclei-templates/: README.md
tools/nuclei-templates/api-logic/: integer-logic.yaml  mass-assignment.yaml  method-override.yaml
tools/nuclei-templates/blind-xss/: headers-blind.yaml  referer-blind.yaml  ua-blind.yaml
tools/nuclei-templates/cross-site/: cors-bypass.yaml  cors-null.yaml  csrf-spoofing.yaml
tools/nuclei-templates/idor/: hpp-idor.yaml  type-juggling-idor.yaml  wrapper-idor.yaml
tools/nuclei-templates/smuggling/: cl-te.yaml  te-cl.yaml  te-te.yaml
tools/nuclei-templates/xss/: framework-csti.yaml  header-polyglot.yaml  svg-xss.yaml
