[package]
name = "rust-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.10.0", features = ["server"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
pcap-file = "3.0.0-rc1"
bytes = "1.0"
chrono = "0.4"
