[package]
name = "caido-recon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.17"
anyhow = "1.0"
regex = "1.5"
futures = "0.3"
url = "2.2"
