[package]
name = "fatalis-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
log = "0.4"
env_logger = "0.10"
http = "0.2"
hyper-tls = "0.5"
